--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "axios": "^0.19.0",
     "date-fns": "^2.0.0-beta.5",
     "date-fns-tz": "^1.0.7",
+    "filesize": "^5.0.1",
     "history": "^4.10.1",
     "immer": "^4.0.0",
+    "lodash": "^4.17.15",
     "polished": "^3.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-circular-progressbar": "^2.0.2",
     "react-dom": "^16.9.0",
+    "react-dropzone": "^10.1.10",
     "react-icons": "^3.7.0",
     "react-identicons": "^1.1.7",
     "react-perfect-scrollbar": "^1.5.3",
