--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "babel-plugin-root-import": "^6.4.1",
     "customize-cra": "^0.6.1",
     "eslint": "^6.3.0",
