--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mikecousins/react-pdf": "^5.3.1",
     "@rocketseat/unform": "^1.5.1",
     "axios": "^0.19.0",
     "date-fns": "^2.0.0-beta.5",
