--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mikecousins/react-pdf": "^5.3.1",
     "@rocketseat/unform": "^1.5.1",
     "axios": "^0.19.0",
     "date-fns": "^2.0.0-beta.5",
@@ -20,6 +19,7 @@
     "react-dropzone": "^10.1.10",
     "react-icons": "^3.7.0",
     "react-identicons": "^1.1.7",
+    "react-pdf": "^4.1.0",
     "react-perfect-scrollbar": "^1.5.3",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
