--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.0.5",
     "styled-components": "^4.3.2",
+    "sweetalert2": "^8.18.5",
     "yup": "^0.27.0"
   },
   "scripts": {
