--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-tabs": "^3.0.0",
     "react-toastify": "^5.3.2",
     "reactotron-react-js": "^3.3.2",
     "reactotron-redux": "^3.1.1",
