--- a/package.json
+++ b/package.json
@@ -5,35 +5,35 @@
   "dependencies": {
     "@rocketseat/unform": "^1.5.1",
     "axios": "^0.19.0",
-    "date-fns": "^2.0.0-beta.5",
+    "date-fns": "^2.8.1",
     "date-fns-tz": "^1.0.8",
     "filesize": "^5.0.1",
     "history": "^4.10.1",
-    "immer": "^4.0.0",
+    "immer": "^4.0.2",
     "lodash": "^4.17.15",
-    "polished": "^3.4.1",
+    "polished": "^3.4.2",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-circular-progressbar": "^2.0.2",
-    "react-dom": "^16.9.0",
-    "react-dropzone": "^10.1.10",
-    "react-icons": "^3.7.0",
+    "react": "^16.12.0",
+    "react-circular-progressbar": "^2.0.3",
+    "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
+    "react-icons": "^3.8.0",
     "react-identicons": "^1.1.7",
     "react-pdf": "^4.1.0",
     "react-perfect-scrollbar": "^1.5.3",
-    "react-redux": "^7.1.1",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "react-tabs": "^3.0.0",
-    "react-toastify": "^5.3.2",
-    "reactotron-react-js": "^3.3.2",
+    "react-tabs": "^3.1.0",
+    "react-toastify": "^5.4.1",
+    "reactotron-react-js": "^3.3.7",
     "reactotron-redux": "^3.1.1",
-    "reactotron-redux-saga": "^4.2.2",
-    "redux": "^4.0.4",
+    "reactotron-redux-saga": "^4.2.3",
+    "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.0.5",
-    "styled-components": "^4.3.2",
-    "sweetalert2": "^8.18.5",
+    "redux-saga": "^1.1.3",
+    "styled-components": "^4.4.1",
+    "sweetalert2": "^8.19.0",
     "yup": "^0.27.0"
   },
   "scripts": {
@@ -61,16 +61,17 @@
     "babel-eslint": "^10.0.3",
     "babel-plugin-root-import": "^6.4.1",
     "customize-cra": "^0.6.1",
-    "eslint": "^6.3.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.3.0",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-import-resolver-babel-plugin-root-import": "^1.1.1",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-import-helpers": "^1.0.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "prettier": "^1.18.2",
-    "react-app-rewired": "^2.1.3"
+    "prettier": "^1.19.1",
+    "react-app-rewired": "^2.1.5"
   }
 }
